--- a/projects/validhtml/index.html
+++ b/projects/validhtml/index.html
@@ -47,13 +47,13 @@
 
 
 <h2>Work</h2>
-<img src="Images/motion.jpg" alt ="Dream">
-<img src="Images/tattoo.gif" alt="Tattoo Design">
-<img src="Images/postcard.jpg" alt="Postcard">
-<img src="Images/Logo.jpg" alt="Oviedo Women's Club">
-<img src="Images/cd-coverFront.jpg" alt="CD Cover">
-<img src="Images/ad.jpg" alt="Shoe Ad">
-<img src="Images/glass.gif" alt="Stained Glass">
+<img src="images/motion.jpg" alt ="Dream">
+<img src="images/tattoo.gif" alt="Tattoo Design">
+<img src="images/postcard.jpg" alt="Postcard">
+<img src="images/Logo.jpg" alt="Oviedo Women's Club">
+<img src="images/cd-coverFront.jpg" alt="CD Cover">
+<img src="images/ad.jpg" alt="Shoe Ad">
+<img src="images/glass.gif" alt="Stained Glass">
 
 
 </body>
